NetStack: Fix locking Change the monitor_lock to be a recursive_lock, fixing #7039. Notify_device_monitor acquires the monitor lock, then the monitor unregisters itself, calling unregister_device_monitor, which acquires the monitor lock again.